--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio Iguana</title>
-    <link rel="stylesheet" href="assets/ccs/reset.css" >
-    <link rel="stylesheet" href="assets/ccs/style.css" >
+    <link rel="stylesheet" href="assets/css/reset.css" >
+    <link rel="stylesheet" href="assets/css/style.css" >
     <script src="https://kit.fontawesome.com/20eec21020.js" crossorigin="anonymous"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
