--- a/index.html
+++ b/index.html
@@ -46,12 +46,26 @@
         </section>
 
         <!-- section: Tres imágenes de iguanas -->
-        <section>            
+        <section id="caracteriticas">               
+                <h2>CARACTERISTICAS</h2>
+                <div class="feature">
+                    <i class="far fa-eye"></i>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quibusdam repellendus neque facere ut odio, reiciendis ratione! Esse, quaerat rem? Unde dolores adipisci et tempora possimus harum dolore pariatur ipsam!
+                </div>   
+                <div class="feature">
+                    <i class="fab fa-hand-peace"></i>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quibusdam repellendus neque facere ut odio, reiciendis ratione! Esse, quaerat rem? Unde dolores adipisci et tempora possimus harum dolore pariatur ipsam!
+                </div>  
+                <div class="feature">
+                    <i class="fas fa-paint-brush"></i>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quibusdam repellendus neque facere ut odio, reiciendis ratione! Esse, quaerat rem? Unde dolores adipisci et tempora possimus harum dolore pariatur ipsam!
+                </div> 
+          
         </section>
 
         <!-- Fin de la página -->
         <footer>
-            <p>Visita https://www.anipedia.net/iguanas/iguana-verde/ para conocer más</p>
+            <p>Visita <a href="https://www.anipedia.net/iguanas/iguana-verde/">https://www.anipedia.net/iguanas/iguana-verde/</a> para conocer más</p>
         </footer>
     </main>
 </body>
