--- a/index.html
+++ b/index.html
@@ -1,92 +1,120 @@
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Desafio Iguana</title>
-    <link rel="stylesheet" href="assets/css/reset.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <script src="https://kit.fontawesome.com/20eec21020.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/css/reset.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <script
+      src="https://kit.fontawesome.com/20eec21020.js"
+      crossorigin="anonymous"
+    ></script>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-
-</head>
-
-<body>
+  <body>
     <!-- main: engloba la página completa -->
     <main>
-        <!-- header: Titulo de la pagina -->
-        <header>
-            <h1>IGUANAS</h1>
-        </header>
+      <!-- header: Titulo de la pagina -->
+      <header>
+        <h1>IGUANAS</h1>
+      </header>
 
-        <!-- section: Foto sola de la iguana -->
-        <section id="slider">
-        </section>
+      <!-- section: Foto sola de la iguana -->
+      <section id="slider"></section>
 
-        <!-- section: descripcion iguanas -->
-        <section id="descripcion_iguanas">
-            <article>
-                <section id="descripcion_iguanas_texto">
-                    <p>La iguana es un reptil perteneciente a la familia Iguanadiae. Su tamaño está entre los 15 cm
-                        hasta los 2 metros de largo y puede llegar a pesar unos 15 kg. Cuando están jóvenes tienen una
-                        coloración con tonos verdes y al ir madurando predomina un color grisáceo con crestas o espinas
-                        en su espalda.</p>
-                    <br>
-                    <p>La alimentación de la iguana va variando según su etapa de vida, pero la mayor parte de sus años
-                        son herbívoras. Viven en lugares tropicales con mucha vegetación y es un animal que puede ser
-                        domesticado.</p>
-                </section>
-                <section id="descripcion_iguanas_imagen">
-                    <img src="assets/img/iguana-1.jpg" alt="Foto de iguana pequeña" width="399" height="237">
-                </section>
-            </article>
-        </section>
-        <!-- section: Caracteristicas -->
-        <section class="features">
-            <h2>CARACTERISTICAS</h2>
-            <div class="feature">
-                <i class="far fa-eye fa-3x"></i>
-                Tercer ojo
-            </div>
-            <div class="feature">
-                <i class="fa-solid fa-hand-peace fa-3x"></i>
-                <!-- <i class="fab fa-hand-peace fa-2x"></i> -->
+      <!-- section: descripcion iguanas -->
+      <section id="descripcion_iguanas">
+        <!-- <article> -->
+          <section id="descripcion_iguanas_texto">
+            <p>
+              La iguana es un reptil perteneciente a la familia Iguanadiae. Su
+              tamaño está entre los 15 cm hasta los 2 metros de largo y puede
+              llegar a pesar unos 15 kg. Cuando están jóvenes tienen una
+              coloración con tonos verdes y al ir madurando predomina un color
+              grisáceo con crestas o espinas en su espalda.
+            </p>
+            <br />
+            <p>
+              La alimentación de la iguana va variando según su etapa de vida,
+              pero la mayor parte de sus años son herbívoras. Viven en lugares
+              tropicales con mucha vegetación y es un animal que puede ser
+              domesticado.
+            </p>
+          </section>
+          <section id="descripcion_iguanas_imagen">
+            <img
+              src="assets/img/iguana-1.jpg"
+              alt="Foto de iguana pequeña"
+              width="399"
+              height="237"
+            />
+          </section>
+        <!-- </article> -->
+      </section>
+      <!-- section: Caracteristicas -->
+      <section class="features">
+        <h2>CARACTERISTICAS</h2>
+        <div class="feature">
+          <i class="far fa-eye fa-3x"></i>
+          Tercer ojo
+        </div>
+        <div class="feature">
+          <i class="fa-solid fa-hand-peace fa-3x"></i>
+          <!-- <i class="fab fa-hand-peace fa-2x"></i> -->
 
-                Pacificas
-            </div>
-            <div class="feature">
-                <i class="fa-solid fa-paintbrush fa-3x"></i>
-                Cambian de color
-            </div>
-        </section>
-        <!-- section: Galeria de iguanas -->
-        <section id="galeria">
-            <div class="foto">
-                <img src="assets/img/iguana-2.jpg" width="316" height="202" alt="Iguana de cuerpo completo">
-            </div>
-            <div class="foto">
-                <img src="assets/img/iguana-3.jpg" width="316" height="202" alt="Iguana de cuerpo completo">
-            </div>
-            <div class="foto">
-                <img src="assets/img/iguana-4.jpg" width="316" height="202" alt="Iguana de cuerpo completo">
-            </div>
-
-        </section>
-        <!-- Fin de la página -->
-        <footer>
-            <p>Visita <a
-                    href="https://www.anipedia.net/iguanas/iguana-verde/">https://www.anipedia.net/iguanas/iguana-verde/</a>
-                para conocer más</p>
-        </footer>
+          Pacificas
+        </div>
+        <div class="feature">
+          <i class="fa-solid fa-paintbrush fa-3x"></i>
+          Cambian de color
+        </div>
+      </section>
+      <!-- section: Galeria de iguanas -->
+      <section id="galeria">
+        <div class="foto">
+          <img
+            src="assets/img/iguana-2.jpg"
+            width="316"
+            height="202"
+            alt="Iguana de cuerpo completo"
+          />
+        </div>
+        <div class="foto">
+          <img
+            src="assets/img/iguana-3.jpg"
+            width="316"
+            height="202"
+            alt="Iguana de cuerpo completo"
+          />
+        </div>
+        <div class="foto">
+          <img
+            src="assets/img/iguana-4.jpg"
+            width="316"
+            height="202"
+            alt="Iguana de cuerpo completo"
+          />
+        </div>
+      </section>
+      <!-- Fin de la página -->
+      <footer>
+        <p>
+          Visita
+          <a href="https://www.anipedia.net/iguanas/iguana-verde/"
+            >https://www.anipedia.net/iguanas/iguana-verde/</a
+          >
+          para conocer más
+        </p>
+      </footer>
     </main>
-</body>
-
+  </body>
 </html>
