Mejoras en el tamaño de las caracteristicas

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
   <body>
     <!-- main: engloba la página completa -->
     <main>
-      <!-- header: Titulo de la pagina -->
+      <!-- header: título de la página -->
       <header>
         <h1>IGUANAS</h1>
       </header>
 
-      <!-- section: Foto sola de la iguana -->
+      <!-- section: Foto de iguana en grande -->
       <section id="slider"></section>
 
       <!-- section: descripcion iguanas -->
@@ -62,19 +62,21 @@
       </section>
       <!-- section: Caracteristicas -->
       <section class="features">
-        <h2>CARACTERISTICAS</h2>
+        <h2>CARACTERÍSTICAS</h2>
         <div class="feature">
-          <i class="far fa-eye fa-3x"></i>
+          <!-- <i class="far fa-eye fa-3x"></i> -->
+          <i class="far fa-eye fa-2x"></i>
           Tercer ojo
         </div>
         <div class="feature">
-          <i class="fa-solid fa-hand-peace fa-3x"></i>
-          <!-- <i class="fab fa-hand-peace fa-2x"></i> -->
+          <i class="fa-solid fa-hand-peace fa-2x"></i>
+          <!-- <i class="fab fa-hand-peace fa-3x"></i> -->
 
-          Pacificas
+          Pacíficas
         </div>
         <div class="feature">
-          <i class="fa-solid fa-paintbrush fa-3x"></i>
+          <!-- <i class="fa-solid fa-paintbrush fa-3x"></i> -->
+          <i class="fa-solid fa-paintbrush fa-2x"></i> 
           Cambian de color
         </div>
       </section>
