--- a/index.html
+++ b/index.html
@@ -110,11 +110,7 @@
       <!-- Fin de la página -->
       <footer>
         <p>
-          Visita
-          <a href="https://www.anipedia.net/iguanas/iguana-verde/"
-            >https://www.anipedia.net/iguanas/iguana-verde/</a
-          >
-          para conocer más
+          Visita https://www.anipedia.net/iguanas/iguana-verde/ para conocer más
         </p>
       </footer>
     </main>
